--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#" class="menu-burger"></a>
         </div>
         <div class="header__logo">
-          <a href="#" class="custom-logo-link">
+          <a href="#" class="custom-logo-link _header">
             <img src="./assets/img/logo.svg" alt="logo">
           </a>
         </div>
@@ -170,6 +170,7 @@
       </div>
     </div>
   </header>
+
   <div class="separate-section">
     <div class="_container separate-section__container">
       <div class="separate-section__wrapper">
@@ -404,6 +405,7 @@
       </div>
     </div>
   </div>
+
   <div class="articles">
     <div class="_container articles__container">
       <div class="articles__wrapper">
@@ -529,6 +531,7 @@
       </div>
     </div>
   </div>
+
   <div data-tag="city" class="articles articles__thematic">
     <div class="_container articles__container">
       <div class="articles__wrapper">
@@ -625,31 +628,22 @@
               </div>
             </div>
           </li>
+
           <li class="articles-list__item _donate">
-            <div class="articles-list__img__content">
-              <a href="#" class="articles-list__img">
-                <span class="articles-list__img__container">
-                  <img src="./assets/img/img-article-2.jpg" alt="article-2">
-                </span>
-                <span class="articles-list__watchers">
-                  <img src="./assets/img/label-watch.svg" alt="watch">
-                  <span>415</span>
-                </span>
-              </a>
-              <a class="articles-list__tag _white" href="#">Місто</a>
-              <a class="articles-list__tag _black" href="#">#Війна</a>
-            </div>
-            <div class="articles-list__text__content">
-              <h3 class="articles-list__title">
-                <a href="#">
-                  <img class="emoji" src="./assets/img/label-article-list-2.svg" alt="💡">
-                  Віялові відключення світла: як вони працюють і для чого потрібні
-                </a>
-              </h3>
-              <div class="articles-list__subtitle">
+            <div class="articles-list__donate__content">
+              <div class="articles-list__donate__text">
                 <p>
-                  Якщо не збалансувати ситуацію, трапиться аварія
+                  Підпишись на фінансову
+                  підтримку Цукру від 50 гривень
+                  та будь впевненим у тому, що
+                  завтра зможеш прочитати ще
+                  щось хороше про Суми.
                 </p>
+              </div>
+              <div class="articles-list__donate__btn__container">
+                <a href="#" class="_btn-black articles-list__donate__btn">
+                  Підтримати
+                </a>
               </div>
             </div>
           </li>
@@ -719,5 +713,52 @@
       </div>
     </div>
   </div>
+
+  <div class="footer">
+    <div class="_container">
+      <div class="footer__wrpapper">
+        <div class="footer__content">
+          <div class="footer__logo">
+            <a href="#" class="custom-logo-link _footer">
+              <img src="./assets/img/logo-white.svg" alt="logo">
+            </a>
+          </div>
+          <ul class="footer-menu">
+            <li>
+              <a href="#" class="footer-menu__item">
+                Про сайт
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-menu__item">
+                Команда
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-menu__item">
+                Реклама
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-menu__item">
+                Контакти
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-menu__item _white">
+                Підтримати
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__copyrights">
+          <p>
+            © 2019-2022, Цукр. Використання матеріалів сайту лише за умови активного посилання на www.cukr.city не нижче третього абзацу.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
